# context-ref-registry

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  skills-lock.json
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Makefile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: config.py  exceptions.py  logging_config.py  main.py  middleware.py
backend/app/api/: admin_api_keys.py  admin_projects.py  admin_users.py  aliases.py  auth.py  bundles.py  contexts.py  entities.py  export.py  ingest.py  projects.py  relations.py  search.py  tags.py  validate.py
backend/app/auth/: dependencies.py  policy.py
backend/app/db/: session.py
backend/app/domain/: enums.py  models.py  ref_pattern.py  schemas.py
backend/app/mcp/: __init__.py  __main__.py  (+4 more)
backend/tests/: conftest.py  test_admin_projects_api.py  test_admin_users_api.py  test_alias_deactivate.py  test_alias_resolve.py  test_api_key_management.py  test_audit_log.py  test_auth_api.py  test_bootstrap_admin.py  test_context_api.py  test_context_bundle.py  test_domain_schemas.py  test_entity_api.py  test_entity_batch_api.py  test_entity_list_api.py  test_entity_mockup_api.py  test_examples.py  test_export_agents_md.py  test_export_openapi.py  test_history_api.py  test_ingest_batch.py  test_jwt_secret_shared.py  test_mcp_http.py  test_mcp_tools.py  test_migrations.py  test_observability.py  test_project_api.py  test_ref_pattern_api.py  test_relation_api.py  test_revision_compare_api.py  test_search_api.py  test_tag_api.py  test_validate_references_api.py
(+223 files in other folders)
